examples/test/testpolicy1221.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1221
  namespace: namespace53
spec:
  podSelector:
    matchLabels:
      key48: value9
      key20: value25
      key16: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value9
          key2: value36
      podSelector:
        matchLabels:
          key17: value41
